--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,44 @@
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+:root {
+  --light: #f6f6f6;
+  --darkblue: #2c3e50;
+  --lightblue: #3498db;
+  --red: #e74c3c;
+  --lightred: #f9eae7;
+  --lightyellow: #fff5d1;
+  --lightgreen:#34dd34;
 }
 
+/* Apply custom Google font */
+body {
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+}
+
+/* Shared custom styles for headers */
+#task-head,
+.custom-modal-header,
+.custom-card-header,
+.btn-custom {
+  background-color: var(--darkblue);
+  color: var(--light);
+}
+
+#add-btn:hover {
+  color: var(--lightblue);
+  background: var(--lightgreen);
+}
+#close:hover{
+background: var(--red);
+}
 .swim-lanes {
   min-height: 60vh;
 }
@@ -14,6 +50,17 @@ body {
 .task-card:hover {
   cursor: grab;
 }
+
+
+/* style project rows based on status (late, due today) */
+.project-late {
+  background-color: var(--lightred);
+}
+
+.project-today {
+  background-color: var(--lightyellow);
+}
+
 #taskBoard{
   height: 600px;
   background-color: #fff;
@@ -26,29 +73,6 @@ body {
   display: none; /* for chrome and safari browser*/
 }
 
-
-.todo{
-  display: grid;
-  gap:14px;
-  
-}
-.todo div{
-  
-  background-color: #e2eede;
-  border: 3px solid #abcea1;
-  padding: 5px;
-  border-radius: 6px;
-  display: grid;
-  gap:4px;
-}
-.option{
-  justify-content: center;
-  display: flex;
-  gap: 20px;
-}
-.option i{
-  cursor: pointer;
-}
 .inputs{
   border: 1px solid #adaead;
   border-radius: 6px;
@@ -68,13 +92,4 @@ body {
   border-radius: 6px;
   width: 100%;
   height: 70px;
-}
-#msg{
-  color: red;
-}
-#deletButton{
-  width: 10px;
-}
-.draggable{
-  z-index: 100;
 }
